--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./normalize.css">
+  <link rel="stylesheet" href="./style.css">
   <title>MiniSearch</title>
 </head>
 
 <body>
-    <h3><center>MiniSearch</center></h3>
-    <script async src="https://cse.google.com/cse.js?cx=942d92529e0014c0b">
+	<header>
+		<p class="title">MiniSearch</p>
+    </header>
+	<script async src="https://cse.google.com/cse.js?cx=942d92529e0014c0b">
     </script>
     <div class="gcse-searchbox"></div>
 
