Add OpenCopilot AI, Add navigation

--- a/opencopilot.html
+++ b/opencopilot.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/png" href="./assets/logo_nofill.png">
+  <link rel="shortcut icon" type="image/png" href="./assets/logo_blackfill.png">
   <link rel="stylesheet" href="./normalize.css">
   <link rel="stylesheet" href="./style.css">
-  <title>MiniSearch</title>
+  <title>MiniSearch - OpenCopilot</title>
 </head>
 
 <body>
 	<header>
-		<p class="title">MiniSearch</p>
+		<p class="title">MiniSearch - OpenCopilot</p>
     </header>
 	<nav>
 		<ul>
@@ -21,17 +21,13 @@
 			<li><a href="https://github.com/ehristoforu/MiniSearch" target="__blank">GitHub</a></li>
 		</ul>
 	</nav>
-	<div class="search-section">
-		<script async src="https://cse.google.com/cse.js?cx=942d92529e0014c0b">
-		</script>
-		
-		<div>
-			<div class="gcse-searchbox"></div>
-		</div>
-		
-		<div>
-			<div class="gcse-searchresults"></div>
-		</div>
+	<div class="opencopilot-section">
+		<iframe
+			src="https://ehristoforu-opencopilot.hf.space"
+			frameborder="0"
+			width=100%
+			height=750px
+		></iframe>
 	</div>
 </body>
 
